[gd_scene load_steps=25 format=3 uid="uid://ba4fqy18hk7s7"]

[ext_resource type="Script" uid="uid://dadnr8i6dpae0" path="res://GUI/pause_menu/pause_menu.gd" id="1_4w82k"]
[ext_resource type="FontFile" uid="uid://e86m1rs0yak4" path="res://GUI/fonts/Abaddon Light.ttf" id="2_sn1ji"]
[ext_resource type="Texture2D" uid="uid://v1aucw8saw2y" path="res://Items/Sprites/items.png" id="2_yiq8o"]
[ext_resource type="Script" uid="uid://b2f3pi42yp8me" path="res://GUI/pause_menu/Inventory/Scripts/inventory_ui.gd" id="3_36pfd"]
[ext_resource type="PackedScene" uid="uid://c3wfi5pg78huf" path="res://GUI/pause_menu/Inventory/inventory_slot.tscn" id="3_rsqrg"]
[ext_resource type="Resource" uid="uid://dnmyd2s4gyv0a" path="res://GUI/pause_menu/Inventory/player_inventory.tres" id="4_ewgu5"]
[ext_resource type="PackedScene" uid="uid://dftvtng3fhxj8" path="res://GUI/pause_menu/stats/stats.tscn" id="6_cvrss"]
[ext_resource type="Texture2D" uid="uid://i3bxkv6dqrkh" path="res://Items/Sprites/gear.png" id="6_fgl3m"]
[ext_resource type="PackedScene" uid="uid://d0d2eh6sl2q7r" path="res://GUI/pause_menu/quests/quest_item.tscn" id="7_8rjl7"]
[ext_resource type="Script" uid="uid://bfpd3mpc7bjcm" path="res://GUI/pause_menu/quests_ui.gd" id="7_dvxeg"]
[ext_resource type="FontFile" uid="uid://ccvatdmcvqh04" path="res://GUI/fonts/m5x7.ttf" id="8_dvxeg"]
[ext_resource type="FontFile" uid="uid://cr74hc551wapv" path="res://GUI/fonts/Abaddon Bold.ttf" id="9_iqcer"]
[ext_resource type="PackedScene" uid="uid://w1bl43ex4fgb" path="res://GUI/pause_menu/quests/quest_step_item.tscn" id="11_40d0i"]
[ext_resource type="Theme" uid="uid://de1uv2nkt6ra3" path="res://shader_and_materials/pause_menu_button_theme.tres" id="12_u3762"]

[sub_resource type="Theme" id="Theme_40d0i"]
TabContainer/colors/font_selected_color = Color(0.9490196, 0.7701194, 0.2935006, 1)
TabContainer/colors/font_unselected_color = Color(0.4765625, 0.4765625, 0.4765625, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiq8o"]
atlas = ExtResource("2_yiq8o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rsqrg"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_yiq8o")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ak53x"]
atlas = ExtResource("6_fgl3m")
region = Rect2(0, 16, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fgl3m"]
load_path = "res://.godot/imported/gear.png-ceafdd2eba1776b0de2c4d025e4126be.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_00kwt"]
atlas = SubResource("CompressedTexture2D_fgl3m")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ak53x"]
load_path = "res://.godot/imported/gear.png-ceafdd2eba1776b0de2c4d025e4126be.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1oddi"]
atlas = SubResource("CompressedTexture2D_ak53x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_00kwt"]
load_path = "res://.godot/imported/gear.png-ceafdd2eba1776b0de2c4d025e4126be.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_syaa3"]
atlas = SubResource("CompressedTexture2D_00kwt")
region = Rect2(16, 16, 16, 16)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_4w82k")
metadata/_edit_horizontal_guides_ = [144.0, 464.0]
metadata/_edit_vertical_guides_ = [1016.0, 136.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12835406, 0.12835406, 0.12835406, 0.503)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
volume_db = -20.0
max_polyphony = 4

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_right = -576.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = SubResource("Theme_40d0i")
theme_override_constants/tab_separation = 2
theme_override_constants/outline_size = 6
tab_alignment = 1
current_tab = 0

[node name="Inventory" type="Control" parent="Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="Control/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -111.0
offset_right = -24.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rsqrg")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_36pfd")
data = ExtResource("4_ewgu5")

[node name="InventorySlot" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot11" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot12" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot13" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot14" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot15" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot16" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot17" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot18" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot19" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="InventorySlot20" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rsqrg")]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Control/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rsqrg")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer2"]
layout_mode = 2
columns = 5

[node name="ArmorIcon" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_ak53x")
stretch_mode = 3

[node name="InventorySlot_Armor" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("3_rsqrg")]
unique_name_in_owner = true
layout_mode = 2

[node name="SpacerRect" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
stretch_mode = 3

[node name="AmuletIcon" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_00kwt")
stretch_mode = 3

[node name="InventorySlot_Amulet" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("3_rsqrg")]
unique_name_in_owner = true
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_1oddi")
stretch_mode = 3

[node name="InventorySlot_Weapon" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("3_rsqrg")]
unique_name_in_owner = true
layout_mode = 2

[node name="SpacerRect2" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
stretch_mode = 3

[node name="RingIcon" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_syaa3")
stretch_mode = 3

[node name="InventorySlot_Ring" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("3_rsqrg")]
unique_name_in_owner = true
layout_mode = 2

[node name="Stats" parent="Control/TabContainer/Inventory" instance=ExtResource("6_cvrss")]
layout_mode = 0
offset_left = 312.0
offset_top = 30.0
offset_right = 508.0
offset_bottom = 89.0

[node name="ItemDescription" type="Label" parent="Control/TabContainer/Inventory"]
modulate = Color(1, 1, 1, 0.80600005)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 53.0
offset_right = -29.333313
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 16
autowrap_mode = 2

[node name="Quests" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("7_dvxeg")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 44.0
offset_top = 14.0
offset_right = 270.0
offset_bottom = 264.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem6" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem7" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="QuestItem8" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_8rjl7")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 288.0
offset_top = 14.0
offset_right = 532.0
offset_bottom = 54.0

[node name="TitleLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.9490196, 0.76862746, 0.29411766, 1)
custom_minimum_size = Vector2(244, 10)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("9_iqcer")
text = "Quest Title"
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.8230131, 0.828125, 0.828125, 1)
custom_minimum_size = Vector2(244, 10)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_dvxeg")
text = "Quest description"
autowrap_mode = 3

[node name="RewardsLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.5520587, 0.5546875, 0.5546875, 1)
custom_minimum_size = Vector2(244, 10)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_dvxeg")
text = "Rewards"
autowrap_mode = 3

[node name="SpacerControl" type="Control" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="QuestStepItem" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("11_40d0i")]
layout_mode = 2

[node name="QuestStepItem2" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("11_40d0i")]
layout_mode = 2

[node name="QuestStepItem3" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("11_40d0i")]
layout_mode = 2

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -55.0
offset_right = 228.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 30

[node name="btn_save" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("12_u3762")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 33
text = "Save"

[node name="btn_load" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
theme = ExtResource("12_u3762")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 33
text = "Load"

[node name="btn_title" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
theme = ExtResource("12_u3762")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 33
text = "Back to Title"

[node name="btn_quit" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
theme = ExtResource("12_u3762")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 33
text = "Quit"

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.58000004)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 304.0
offset_top = 24.0
offset_right = 400.0
offset_bottom = 48.0
grow_horizontal = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_sn1ji")
theme_override_font_sizes/font_size = 16
text = "[ paused ]"
horizontal_alignment = 1
